# syncrime

./: .gitignore  CHANGELOG.md  CODE_REVIEW_REPORT.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DEVLOG.md  GITHUB_PUSH_COMPLETE.md  PROGRESS_REPORT.md  PROJECT_PROGRESS.md  README.md  SyncRime-v1.0-release-unsigned.apk  TESTING_NOTES.md  Trime云同步开发计划.md  USER_GUIDE.md  hotkey-macro-system-design.md  input-intervention-system-design.md  input-method-integration.ts  knowledge-system-demo.ts  personal-knowledge-system-architecture.md  search_optimization_summary.md  tag-system-design.md
android-client/: .gitignore  README.md  build.gradle  build.gradle.kts  gradlew  local.properties.template  search-feature-optimization-summary.md  settings.gradle  settings.gradle.kts
android-client/app/: build.gradle  build.gradle.kts
android-client/docs/: architecture-design.md  phase3-core-completion-report.md
android-client/inputmethod/: build.gradle.kts
android-client/shared/: build.gradle.kts
docs/: README.md  phase2-completion-report.md
docs/api/: README.md
docs/architecture/: AI_FEATURE_FEASIBILITY.md  BACKEND_LIGHTWEIGHT.md  CLIPPER_FEASIBILITY.md  SIMPLIFIED_ARCHITECTURE.md  (+5 more)
scripts/: check_syncrime.sh
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
trime-plugin/: README.md
trime-plugin/app/src/main/cpp/: CMakeLists.txt
trime-plugin/app/src/main/cpp/include/: data_collector.h  syncrime_plugin.h
trime-plugin/app/src/main/cpp/src/: data_collector.cpp  jni_bridge.cpp  syncrime_plugin.cpp
(+156 files in other folders)
